# smallchat-win32

./: CMakeLists.txt  README.md  README_CN.md  chatlib.c  chatlib.h  smallchat-client.c  smallchat-server.c
